// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map should change latitude and longitude coordinates if user location is not specified 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Map
    events={
      Array [
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Mon, Apr 1, 2019 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4amDV3z0",
          "favorite": false,
          "img": "https://s1.ticketm.net/dam/a/1dd/d5e86d93-5e1a-49d9-b530-70fefc0f21dd_877061_RETINA_PORTRAIT_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "P!NK: BEAUTIFUL TRAUMA WORLD TOUR",
          "url": "https://www.altitudetickets.com/events/detail/pink-2019",
          "venue_name": "Pepsi Center",
        },
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Tue, Dec 4, 2018 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4aV5O3CO",
          "favorite": true,
          "img": "https://s1.ticketm.net/dam/a/7d9/44a96192-d246-4946-b6b4-c1f7f975a7d9_816871_TABLET_LANDSCAPE_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "Childish Gambino",
          "url": "https://www.altitudetickets.com/events/detail/childish-gambino",
          "venue_name": "Pepsi Center",
        },
      ]
    }
    setEvents={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "json": [Function],
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    userLocation={
      Object {
        "latitude": 23,
        "longitude": 42,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bearing": 0,
      "center": Array [
        42,
        23,
      ],
      "children": Array [
        <UserLocation
          lat={23}
          lng={42}
        />,
        <Connect(Events)
          retrieveEvents={[Function]}
        />,
      ],
      "containerStyle": Object {
        "height": "100vh",
        "width": "100vw",
      },
      "movingMethod": "flyTo",
      "onStyleLoad": [Function],
      "pitch": 0,
      "style": "mapbox://styles/mapbox/undefined-v9",
      "zoom": Array [
        13,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "lat": 23,
          "lng": 42,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "retrieveEvents": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bearing": 0,
        "center": Array [
          42,
          23,
        ],
        "children": Array [
          <UserLocation
            lat={23}
            lng={42}
          />,
          <Connect(Events)
            retrieveEvents={[Function]}
          />,
        ],
        "containerStyle": Object {
          "height": "100vh",
          "width": "100vw",
        },
        "movingMethod": "flyTo",
        "onStyleLoad": [Function],
        "pitch": 0,
        "style": "mapbox://styles/mapbox/undefined-v9",
        "zoom": Array [
          13,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "lat": 23,
            "lng": 42,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "retrieveEvents": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Map should matchSnapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Map
    events={
      Array [
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Mon, Apr 1, 2019 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4amDV3z0",
          "favorite": false,
          "img": "https://s1.ticketm.net/dam/a/1dd/d5e86d93-5e1a-49d9-b530-70fefc0f21dd_877061_RETINA_PORTRAIT_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "P!NK: BEAUTIFUL TRAUMA WORLD TOUR",
          "url": "https://www.altitudetickets.com/events/detail/pink-2019",
          "venue_name": "Pepsi Center",
        },
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Tue, Dec 4, 2018 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4aV5O3CO",
          "favorite": true,
          "img": "https://s1.ticketm.net/dam/a/7d9/44a96192-d246-4946-b6b4-c1f7f975a7d9_816871_TABLET_LANDSCAPE_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "Childish Gambino",
          "url": "https://www.altitudetickets.com/events/detail/childish-gambino",
          "venue_name": "Pepsi Center",
        },
      ]
    }
    setEvents={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "json": [Function],
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    userLocation={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bearing": 0,
      "center": Array [
        -0.2416815,
        51.5285582,
      ],
      "containerStyle": Object {
        "height": "100vh",
        "width": "100vw",
      },
      "movingMethod": "flyTo",
      "onStyleLoad": [Function],
      "pitch": 0,
      "style": "mapbox://styles/mapbox/undefined-v9",
      "zoom": Array [
        13,
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bearing": 0,
        "center": Array [
          -0.2416815,
          51.5285582,
        ],
        "containerStyle": Object {
          "height": "100vh",
          "width": "100vw",
        },
        "movingMethod": "flyTo",
        "onStyleLoad": [Function],
        "pitch": 0,
        "style": "mapbox://styles/mapbox/undefined-v9",
        "zoom": Array [
          13,
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
